# coding-dojo

./: prompt.md
.sisyphus/plans/: mvcc-dojo.md
bm25-dojo/: README.md  bm25.py  main.py  pyproject.toml  test_bm25.py  visualize_bm25.py
go-channel-dojo/: README.md  go.mod
go-channel-dojo/cmd/: main.go
go-channel-dojo/docs/: Assistance.md  README.md
mvcc-dojo/: docker-compose.yml  main.py  pyproject.toml
mvcc-dojo/docs/: Assistance.md  README.md
mvcc-dojo/src/: connection.py  observations.py
mvcc-dojo/tests/: conftest.py  test_mission_1_reader_not_blocking.py  test_mission_2_snapshot_isolation.py  test_mission_3_dead_tuples.py  test_mission_4_vacuum.py  test_mission_5_xid_wraparound.py  test_mission_6_write_conflict.py  test_mission_7_long_tx_blocks_vacuum.py
rate-limiting-dojo/: .gitignore  main.py  pyproject.toml
rate-limiting-dojo/docs/: Assistance.md  README.md
rate-limiting-dojo/src/: fixed_rate_limiter.py  rate_limiter.py
rate-limiting-dojo/test/: test_rate_limiter.py
rust-chat-dojo/: Cargo.toml  README.md
rust-chat-dojo/docs/: Assistance.md  README.md
rust-chat-dojo/src/: lib.rs
rust-chat-dojo/tests/: mission_tests.rs
rust-closure-traits-dojo/: Cargo.toml  README.md
rust-dojo/: .gitignore  Cargo.toml  README.md
rust-filesystem-dojo/: Cargo.toml  README.md
rust-smartptr-dojo/: Cargo.toml  README.md
rust-tcp-chat-dojo/: Cargo.toml  README.md
rust-tcp-chat-dojo/docs/: Assistance.md  README.md
rust-tcp-chat-dojo/src/: lib.rs
rust-tcp-chat-dojo/tests/: mission_tests.rs
rust-worker-dojo/: .gitignore  Cargo.toml  README.md
(+45 files in other folders)
